# dg5f_ros2

./: README.md
.github/workflows/: ci.yml
dg5f_description/: package.xml  setup.cfg  setup.py
dg5f_description/launch/: dg5f_left_display.launch.py  dg5f_right_display.launch.py  dg5f_right_fingertip_display.launch.py
dg5f_description/meshes/dg5f_left_base/collision/: l_dg_tip.STL  ll_dg_1_4_c.STL
dg5f_description/meshes/dg5f_left_base/visual/: dg_tip.dae  ll_dg_1_1.dae  ll_dg_1_2.dae  ll_dg_1_3.dae  ll_dg_1_4.dae  ll_dg_2_1.dae  ll_dg_2_2.dae  ll_dg_2_3.dae  ll_dg_2_4.dae  ll_dg_3_1.dae  ll_dg_4_1.dae  ll_dg_5_1.dae  ll_dg_5_2.dae  ll_dg_5_3.dae  ll_dg_5_4.dae  ll_dg_base.dae  ll_dg_palm.dae
dg5f_description/meshes/dg5f_right_base/collision/: dg_sensor_type1_c.STL  dg_tip_c.STL  rl_dg_1_4_c.STL  rl_dg_4_4_c.STL  rl_dg_5_4_c.STL
dg5f_description/meshes/dg5f_right_base/visual/: dg_sensor_type1.dae  rl_dg_1_1.dae  (+10 more)
dg5f_description/meshes/retrofit/: Untitled.dae  reftorigt_left_palm.STL  reftorigt_right_palm.STL  retrofit_Fingertip.STL
dg5f_description/urdf/: dg5f.xacro  dg5f_left.urdf  dg5f_left.xacro  dg5f_left_fingers.urdf.xacro  dg5f_left_short.urdf  dg5f_macro.xacro  dg5f_right.urdf  dg5f_right.xacro  dg5f_right_display.xacro  dg5f_right_fingers.urdf.xacro  dg5f_right_short.urdf
dg5f_driver/: CMakeLists.txt  README.md  package.xml
dg5f_driver/config/: dg5f_both_ft_broadcaster.yaml  dg5f_both_mock_controller.yaml  dg5f_both_pid_all_controller.yaml  dg5f_left_controller.yaml  dg5f_left_effort_controller.yaml  dg5f_left_ft_broadcaster.yaml  dg5f_left_mock_controller.yaml  dg5f_left_pid_all_controller.yaml  dg5f_left_pid_controller.yaml  dg5f_right_controller.yaml  dg5f_right_effort_controller.yaml  dg5f_right_ft_broadcaster.yaml  dg5f_right_mock_controller.yaml  dg5f_right_pid_all_controller.yaml  dg5f_right_pid_controller.yaml
dg5f_driver/launch/: dg5f_both_mock.launch.py  dg5f_both_pid_all_controller.launch.py  dg5f_left_driver.launch.py  dg5f_left_effort_controller.launch.py  dg5f_left_mock.launch.py  dg5f_left_pid_all_controller.launch.py  dg5f_left_pid_controller.launch.py  dg5f_right_driver.launch.py  dg5f_right_effort_controller.launch.py  dg5f_right_mock.launch.py  dg5f_right_pid_all_controller.launch.py  dg5f_right_pid_controller.launch.py
dg5f_driver/script/: dg5f_left_jtc_test.py  dg5f_left_pid_all_test.py  dg5f_left_pid_test.py  dg5f_right_jtc_test.py  dg5f_right_pid_all_test.py  dg5f_right_pid_test.py
dg5f_driver/script/manus_retarget/: manus_retarget.md  manus_retarget.py  manus_retarget_kr.md
dg5f_driver/src/: dg5f_operator_driver.cpp
dg5f_driver/urdf/: dg5f_both_mock.xacro  dg5f_both_ros2_control.xacro  dg5f_left_mock.xacro  dg5f_left_ros2_control.xacro  dg5f_right_mock.xacro  dg5f_right_ros2_control.xacro
dg5f_gz/: README.md
dg5f_gz/launch/: dg5f_both_gz.launch.py  dg5f_left_gz.launch.py  dg5f_right_gz.launch.py
dg5f_gz/urdf/: dg5f_both_gz.xacro  dg5f_left_gz.xacro  dg5f_right_gz.xacro
dg5f_moveit_config/: CMakeLists.txt  package.xml
dg5f_moveit_config/config/: dg5f_left_moveit.rviz  dg5f_right_moveit.rviz  joint_limits.yaml  kinematics.yaml  kinematics_jazzy.yaml  moveit_controllers.yaml  moveit_controllers_left.yaml  ompl_planning.yaml  ompl_planning_jazzy.yaml  rviz.rviz
dg5f_moveit_config/launch/: dg5f_left_moveit.launch.py  dg5f_right_moveit.launch.py
dg5f_moveit_config/srdf/: dg5f_left.srdf  dg5f_right.srdf
