<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dg5f_driver</name>
  <version>0.0.2</version>
  <description>Tesollo DG-5F ROS2 package</description>
  <maintainer email="khc@tesollo.com">hong</maintainer>
  <license>BSD3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>boost</depend>
  <depend>delto_tcp_comm</depend>
  <depend>delto_hardware</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
