<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dg5f_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt configuration for Tesollo DG-5F gripper</description>
  <maintainer email="khc@tesollo.com">hong</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_kinematics</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>xacro</depend>
  <depend>dg5f_description</depend>
  <depend>dg5f_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
